Fix "Image Dragon" image link

--- a/2023-2024/image-dragon/index.html
+++ b/2023-2024/image-dragon/index.html
@@ -26,15 +26,15 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="/cours-html-2/partie 2/image-dragon/images/dragon4.gif">
+                    <img src="images/dragon4.gif">
                 </td>
                 <td>
-                    <img src="/cours-html-2/partie 2/image-dragon/images/dragon3.gif">
-                    <img src="/cours-html-2/partie 2/image-dragon/images/anidrag.gif"> 
-                    <img src="/cours-html-2/partie 2/image-dragon/images/dragon2.gif">
+                    <img src="images/dragon3.gif">
+                    <img src="images/anidrag.gif"> 
+                    <img src="images/dragon2.gif">
                 </td>
                 <td>
-                    <img src="/cours-html-2/partie 2/image-dragon/images/dragon5.gif"> 
+                    <img src="images/dragon5.gif"> 
                 </td>
             </tr>
         </tbody>
