Fix "Image Dragon" Project

--- a/2023-2024/image-dragon/index.html
+++ b/2023-2024/image-dragon/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image d'un Dragon recomposé via un tableau / Antonio Nice<title>
+    <title>Image d'un Dragon recomposé via un tableau / Antonio Nice</title>
     <style>
-        .remove-border-table { /* Trouvé sur des codes Codepen/Github d'une amie */
-            border: none !important; /* https://developer.mozilla.org/fr/docs/Web/CSS/border */
-            border-collapse: collapse !important; /* https://developer.mozilla.org/fr/docs/Web/CSS/border-collapse */
+        /* Trouvé sur des codes Codepen/Github d'une amie */
+        /* https://developer.mozilla.org/fr/docs/Web/CSS/border */
+        /* https://developer.mozilla.org/fr/docs/Web/CSS/border-collapse */
+        .remove-border-table { 
+            border: none !important;
+            border-collapse: collapse !important;
         }
 
+        /* Trouvé sur des codes Codepen/Github d'une amie */
+        /* https://www.w3.org/Style/Examples/007/units.fr.html & https://developer.mozilla.org/fr/docs/Web/CSS/padding */
         .remove-border-table td,
-        .remove-border-table th { /* Trouvé sur des codes Codepen/Github d'une amie */
-            padding: 0em; /* https://www.w3.org/Style/Examples/007/units.fr.html & https://developer.mozilla.org/fr/docs/Web/CSS/padding */
+        .remove-border-table th { 
+            padding: 0em;
         }
 
-        
-        img { /* https://discuss.codecademy.com/t/how-can-i-add-an-image-below-another-image/48804/2 */
+        /* https://discuss.codecademy.com/t/how-can-i-add-an-image-below-another-image/48804/2 */
+        img { 
             display: block 
         } 
     </style>
@@ -26,15 +31,15 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="images/dragon4.gif">
+                    <img src="./images/dragon4.gif">
                 </td>
                 <td>
-                    <img src="images/dragon3.gif">
-                    <img src="images/anidrag.gif"> 
-                    <img src="images/dragon2.gif">
+                    <img src="./images/dragon3.gif">
+                    <img src="./images/anidrag.gif"> 
+                    <img src="./images/dragon2.gif">
                 </td>
                 <td>
-                    <img src="images/dragon5.gif"> 
+                    <img src="./images/dragon5.gif"> 
                 </td>
             </tr>
         </tbody>
