Update "Télétransmission" Project

--- a/2023-2024/teletransmission/index.html
+++ b/2023-2024/teletransmission/index.html
@@ -16,9 +16,9 @@
 	<p align="center">Nous allons passer en revue les principaux types de supports utilisés pour la télétransmission :
 	</p>
 	</h1>
-	<h2><a href="./metal.html"><p align="center">Les supports métalliques</p></h2></a>
-	<h2><a href="./radio.html"><p align="center">Les ondes radios</p></h2></a>
-	<h2><a href="./lumiere.html"><p align="center">La lumière</p></h2></a>
+	<h2><a href="./metal"><p align="center">Les supports métalliques</p></h2></a>
+	<h2><a href="./radio"><p align="center">Les ondes radios</p></h2></a>
+	<h2><a href="./lumiere"><p align="center">La lumière</p></h2></a>
 	
 	<h3><p>"contactez-moi"</p></h3>
 	<h3> <a href ="mailto:nice29041964antonio@gmail.com">nice29041964antonio@gmail.com</a></h3> 
