--- a/2023-2024/teletransmission/lumiere.html
+++ b/2023-2024/teletransmission/lumiere.html
@@ -13,7 +13,7 @@
 	
 	<body>
 		<h2><p align="left">La lumière</p></h2>
-		<p align="center"><a href="http://www.disney.com"><img src="./images/53.JPG/" border=0 width=79 height=155></p></a>
+		<p align="center"><a href="http://www.disney.com"><img src="./images/53.JPG" border=0 width=79 height=155></p></a>
 		<p align="left">Depuis plusieurs années et malgré quelques problèmes de connexion essentiellement, la télétransmission met en place des communications via la fibre optique.</p>
 		<h2><a href="./"><h2><p align="center">retour</p></h2></a>
 	</body>
