--- a/2023-2024/Index/index.html
+++ b/2023-2024/Index/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP 2</title>
+    <title>index</title>
 </head>
 <body>
    <h1 align="center">TP 2</h1> 
