--- a/2023-2024/index.html
+++ b/2023-2024/index.html
@@ -9,18 +9,18 @@
    <h1 align="center">TP 2</h1> 
    <h2>retrouvez les différantes pages crées lors de ce TP : </h2>
    <h3> &#x25CF; 1 : la télétransmission</h3>
-    <a href="https://antonionice.github.io/school-project/2023-2024/teletransmission/">https://antonionice.github.io/school-project/2023-2024/teletransmission/</a>
+    <a href="/school-project/2023-2024/teletransmission/">Voir le projet</a>
    
     <h3> &#x25CF; 2 : Carte de France</h3>
-   <a href="https://antonionice.github.io/school-project/2023-2024/cartes/carte-de-france">https://antonionice.github.io/school-project/2023-2024/cartes/carte-de-france</a>
+   <a href="/school-project/2023-2024/cartes/carte-de-france">Voir le projet</a>
 
    <h3> &#x25CF;  3 : (bonus) Warthunder</h3>
-    <a href="https://antonionice.github.io/school-project/2023-2024/bonus/warthunder/">https://antonionice.github.io/school-project/2023-2024/bonus/warthunder/</a>
+    <a href="/school-project/2023-2024/bonus/warthunder/">Voir le projet</a>
    
     <h3> &#x25CF; 4 : Recette de cuisine</h3>
-    <a href="https://antonionice.github.io/school-project/2023-2024/recette-de-cuisine/">https://antonionice.github.io/school-project/2023-2024/recette-de-cuisine/</a>
+    <a href="/school-project/2023-2024/recette-de-cuisine/">Voir le projet</a>
    
     <h3> &#x25CF; 5 : image reconstitué d'un dragon </h3>
-    <a href=https://antonionice.github.io/school-project/2023-2024/image-dragon>https://antonionice.github.io/school-project/2023-2024/image-dragon</a>
+    <a href=/school-project/2023-2024/image-dragon">Voir le projet</a>
 </body>
 </html>
