--- a/2023-2024/index.html
+++ b/2023-2024/index.html
@@ -8,19 +8,13 @@
 <body>
    <h1 align="center">TP 2</h1> 
    <h2>retrouvez les différantes pages crées lors de ce TP : </h2>
-   <h3> &#x25CF; 1 : la télétransmission</h3>
-    <a href="/school-project/2023-2024/teletransmission/">Voir le projet</a>
-   
-    <h3> &#x25CF; 2 : Carte de France</h3>
-   <a href="/school-project/2023-2024/cartes/carte-de-france">Voir le projet</a>
+   <p> &#x25CF; 1 : <a href="/school-project/2023-2024/teletransmission/">la télétransmission</a></p>
+    <p> &#x25CF; 2 : <a href="/school-project/2023-2024/cartes/carte-de-france">Carte de France</a></p>
+   <p> &#x25CF;  3 : <a href="/school-project/2023-2024/bonus/warthunder/">(bonus) Warthunder</a></p>
+<p> &#x25CF; 4 : <a href="/school-project/2023-2024/recette-de-cuisine/">Recette de cuisine</a></p>
 
-   <h3> &#x25CF;  3 : (bonus) Warthunder</h3>
-    <a href="/school-project/2023-2024/bonus/warthunder/">Voir le projet</a>
    
-    <h3> &#x25CF; 4 : Recette de cuisine</h3>
-    <a href="/school-project/2023-2024/recette-de-cuisine/">Voir le projet</a>
-   
-    <h3> &#x25CF; 5 : image reconstitué d'un dragon </h3>
-    <a href=/school-project/2023-2024/image-dragon">Voir le projet</a>
+    <p> &#x25CF; 5 : <a href=/school-project/2023-2024/image-dragon">image reconstitué d'un dragon </a></p>
+
 </body>
 </html>
