--- a/2023-2024/site-perso/casque-vr/index/html/casque-vr-gaming.html
+++ b/2023-2024/site-perso/casque-vr/index/html/casque-vr-gaming.html
@@ -34,7 +34,7 @@
               Vers le Casque Playstation VR2</a></li>
         </ul>
       </li>
-      <li><a href="mailto:nice29041964antonio@gmail.com">Contact</a></li>
+      <li><a href="formulaire.html">Contact</a></li>
     </ul>
   </nav>
   </div>
