--- a/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
+++ b/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
@@ -33,7 +33,7 @@
         <ul class="sous">
           <li><a href="casque-vr-gaming.html">Monde du jeux vidéo</a></li>
           <li><a href="casque-vr-serieux.html">Monde du Travail</a></li>
-          <li><a href="/html-css/site-perso/error-404/Accueil.html">Réalité Augmentée</a></li>
+          <li><a href="./html-css/site-perso/error-404/Accueil.html">Réalité Augmentée</a></li>
         </ul>
       </li>
       <li class="deroulant"><a href="#">Articles Vr &ensp;</a>
@@ -102,12 +102,12 @@
     autorisent une immersion totale de l’utilisateur. L’essentiel du marché
     est d’ailleurs tourné vers le casque vr de gaming applications plus « sérieuses sont encore rares.<br /><br />
     <a href="//www.meta.com/fr/quest/">
-      <img src="/html-css/site-perso/casque-vr/images/f5edcc82-quest-2__450_400.jpeg">
+      <img src="./html-css/site-perso/casque-vr/images/f5edcc82-quest-2__450_400.jpeg">
     </a>
 
     <a href="../html/casque-vr-serieux.html">
       <img
-        src="/html-css/site-perso/casque-vr/images/realite_virtuelle_journee_securite_chasse_aux_risque_tp_chantier_casquevr_2-e1609861669355.jpeg" />
+        src="./html-css/site-perso/casque-vr/images/realite_virtuelle_journee_securite_chasse_aux_risque_tp_chantier_casquevr_2-e1609861669355.jpeg" />
     </a>
     <br /><br />
   </p>
