--- a/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
+++ b/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
@@ -49,8 +49,7 @@
       <li><a href="formulaire.html">Contact</a></li>
     </ul>
   </nav>
-  </div>
-  <hr />
+  <hr>
 
   <h3>Quesque la Réalité Virtuelle ?</h3>
   <br>
@@ -62,22 +61,22 @@
     L’utilisateur peut aussi interagir avec cet environnement fictif. La
     réalité virtuelle reproduit donc artificiellement une expérience
     sensorielle, qui peut inclure :<br />
-    &#x2022; la vue<br />
-    &#x2022; le toucher<br />
-    &#x2022; l'ouïe <br />
-    &#x2022; l'odorat.<br /><br />
+    &#x2022; la vue<br>
+    &#x2022; le toucher<br>
+    &#x2022; l'ouïe <br>
+    &#x2022; l'odorat.<br><br>
 
     A l’origine elle a été développée pour reproduire des situations complexes
     et proposer des simulations ou des entrainements. On peut penser par
     exemple aux simulateurs de vol qui permettent aux pilotes de ligne de
-    s’exercer dans des situations à risque.<br /><br />
-    <u>Voir ci-dessous un simulateur de vol : </u> <br /><br />
+    s’exercer dans des situations à risque.<br><br>
+    <u>Voir ci-dessous un simulateur de vol : </u> <br><br>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/sigamvJtLmA?si=fbeAzb1sdVL_dPMQ"
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen></iframe>
-    <br /><br />
+    <br><br>
 
     Avec la miniaturisation des technologies d’affichage et le progrès de
     l’informatique, la réalité virtuelle a gagné la sphère privée. Là où
@@ -86,15 +85,15 @@
     tout le monde peut enfiler un casque de réalité virtuelle et se retrouver
     plongé au cœur de la jungle amazonienne, dans un vaisseau spatial ou au
     bord d’un ravin !
-    <br /><br />
+    <br><br>
     <u>Voir ci-dessous ce dont est capable un casque de réalité virtuel : </u>
-    <br /><br />
+    <br><br>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/60yP8f5E-B4?si=fwOxTLAkg6oeKkZi"
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen></iframe>
-    <br /><br />
+    <br><br>
 
     En quelques années les casques de réalité virtuelle se sont ainsi
     développés à une vitesse prodigieuse. Les éditeurs de jeux et de logiciel
@@ -109,7 +108,7 @@
       <img
         src="./images/realite_virtuelle_journee_securite_chasse_aux_risque_tp_chantier_casquevr_2-e1609861669355.jpeg" />
     </a>
-    <br /><br />
+    <br><br>
   </p>
 
   <h3>Comment ça fonctionne ?</h3>
@@ -121,7 +120,7 @@
     utilisateurs ne regardent pas un écran plat situé devant eux, mais à
     travers un casque qui englobe tout le champ de vision. Ce casque projette
     une petite image pour chaque œil, et le cerveau les rassemble pour les
-    transformer en une vision 3D.<br /><br />
+    transformer en une vision 3D.<br><br>
 
     Comme les lentilles du casque amplifient l’image, les joueurs voient des
     images qui remplissent leur champ de vision. Ces images bougent avec les
@@ -131,7 +130,7 @@
     vraiment la tête dans le monde virtuel, lui permettant de regarder vers le
     ciel ou derrière lui par exemple. C’est cet effet qui donne une sensation
     profonde d’immersion et qui fait en sorte que vous oubliez assez
-    rapidement l’écran fixé devant vos yeux.<br /><br />
+    rapidement l’écran fixé devant vos yeux.<br><br>
 
     Pour donner une sensation de réalité et de fluidité du monde dans lequel
     on est immergé, les casques vr doivent réaliser des prouesses techniques
