--- a/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
+++ b/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
@@ -216,7 +216,7 @@
   </nav>
 
   <footer>
-    Made by NICE Antonio - 2023/2024 <br />
+    Made by NICE Antonio - 2023/2024 <br>
   </footer>
 
 </body>
