--- a/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
+++ b/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
@@ -105,7 +105,7 @@
     </a>
 
     <a href="../html/casque-vr-serieux.html">
-      <img
+      <img alt=""
         src="./images/realite_virtuelle_journee_securite_chasse_aux_risque_tp_chantier_casquevr_2-e1609861669355.jpeg" />
     </a>
     <br><br>
