--- a/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
+++ b/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
@@ -101,7 +101,7 @@
     autorisent une immersion totale de l’utilisateur. L’essentiel du marché
     est d’ailleurs tourné vers le casque vr de gaming applications plus « sérieuses sont encore rares.<br /><br />
     <a href="//www.meta.com/fr/quest/">
-      <img src="./images/f5edcc82-quest-2__450_400.jpeg">
+      <img alt="" src="./images/f5edcc82-quest-2__450_400.jpeg">
     </a>
 
     <a href="../html/casque-vr-serieux.html">
