--- a/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
+++ b/2023-2024/html-css/site-perso/casque-vr/index/html/index.html
@@ -33,7 +33,7 @@
         <ul class="sous">
           <li><a href="casque-vr-gaming.html">Monde du jeux vidéo</a></li>
           <li><a href="casque-vr-serieux.html">Monde du Travail</a></li>
-          <li><a href="https://antonionice.github.io/school-project/2023-2024/html-css/site-perso/casque-ar/index/html/casque-de-realiter-augmenter.html">Réalité Augmentée</a></li>
+          <li><a href="https:"//antonionice.github.io/school-project/2023-2024/html-css/site-perso/casque-ar/index/html/casque-de-realiter-augmenter.html">Réalité Augmentée</a></li>
         </ul>
       </li>
       <li class="deroulant"><a href="#">Articles Vr &ensp;</a>
