--- a/2024-2025/html-css/bootstrap/hello-world-bootstrap/index.html
+++ b/2024-2025/html-css/bootstrap/hello-world-bootstrap/index.html
@@ -69,12 +69,37 @@
                 <div class="mb-4">
                     <h3>Compétences :</h3>
                     <ul class="list-inline">
-                        <li class="list-inline-item badge bg-primary">HTML</li>
-                        <li class="list-inline-item badge bg-primary">CSS</li>
-                        <li class="list-inline-item badge bg-primary">JavaScript</li>
-                        <li class="list-inline-item badge bg-primary">PHP</li>
-                        <li class="list-inline-item badge bg-primary">Bootstrap</li>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">HTML</div>
+                          </div>
                     </ul>
+
+                    <ul class="list-inline"></ul>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">CSS</div>
+                          </div>
+                    </ul>
+
+                    <ul class="list-inline"></ul>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">bootsrtap</div>
+                          </div>
+                    </ul>
+
+                    <ul class="list-inline"></ul>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
+                          </div>
+                    </ul>
+
+                    <ul class="list-inline"></ul>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">MySQL</div>
+                          </div>
+                    </ul>
+
+                    
+
                 </div>
 
                 <div class="mb-4">
