--- a/2024-2025/html-css/bootstrap/hello-world-bootstrap/index.html
+++ b/2024-2025/html-css/bootstrap/hello-world-bootstrap/index.html
@@ -82,7 +82,7 @@
 
                     <ul class="list-inline"></ul>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">bootsrtap</div>
+                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">bootstrap</div>
                           </div>
                     </ul>
 
